--- a/core/res/res/values/custom_attrs.xml
+++ b/core/res/res/values/custom_attrs.xml
@@ -15,9 +15,12 @@
 -->
 <resources>
 
-    <!-- Base attributes available to SlimSeekBarPreference. -->
     <declare-styleable name="SlimSeekBarPreference">
-    <!-- No added attributes at this time -->
+        <!-- No added attributes at this time -->
+        <attr name="interval" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="unitsLeft" format="string|reference" />
+        <attr name="unitsRight" format="string|reference" />
     </declare-styleable>
 
 </resources>
