--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -283,4 +283,7 @@
 
   <!-- System fonts -->
   <java-symbol type="array" name="config_fontPackages" />
+
+  <!-- Power menu -->
+  <java-symbol type="drawable" name="ic_lock_screenrecord" />
 </resources>
