--- a/packages/SystemUI/res/xml/statusbar_items.xml
+++ b/packages/SystemUI/res/xml/statusbar_items.xml
@@ -67,6 +67,10 @@
         android:title="@string/status_bar_vpn" />
 
     <com.android.systemui.tuner.StatusBarSwitch
+        android:key="volte"
+        android:title="@string/tuner_volte_title" />
+
+    <com.android.systemui.tuner.StatusBarSwitch
         android:key="nfc"
         android:persistent="false"
         android:title="@string/status_bar_nfc" />
@@ -76,3 +80,4 @@
         android:title="@string/status_bar_roaming" />
 
 </PreferenceScreen>
+
